refactor: value objects, add tests, reorganize packages